--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,32 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Document</title>
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="mb-4">Users List</h1>
-        <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
-                <tr>
-                    <th>ID</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% users.forEach(item => { %>
-                    <tr>
-                        <td><%= item.id %></td>
-                        <td><%= item.firstName %></td>
-                        <td><%= item.lastName %></td>
-                    </tr>
-                <% }) %>
-            </tbody>
-        </table>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <h1>
+        Home
+    </h1>
+    <a href="/api/users">User</a>
 </body>
 </html>
