--- a/src/views/users/list.ejs
+++ b/src/views/users/list.ejs
@@ -34,7 +34,7 @@
                                     <a href="/api/users/<%= item.id %>/edit" class="btn btn-warning btn-sm">
                                         <i class="fas fa-edit"></i> Edit
                                     </a>
-                                    <a href="/api/users/<%= item.id %>/delete" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this book?');">
+                                    <a href="/api/users/<%= item.id %>/delete" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this user?');">
                                         <i class="fas fa-trash"></i> Delete
                                     </a>
                                 </td>
